ignore old paper files

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ latex/
 /code/hidden
 /code/08_morphologies/plots
 /code/08_morphologies/anim
+/first-submission
+/resubmission
 *.doc
 *.docx
 *.pages
