--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 /*/*/*/x86_64/*
 figs/
 latex/
-/results/08/plots
-/results/08/anim
+/results/08/plots/*/*.eps
+/results/08/anim/*/*.mp4
 /results/misc
 /first-submission
 /second-submission
